@@ -16,6 +16,10 @@ Enhancements::
 * add `--theme` option to CLI as shorthand for `-a pdf-theme` (#2250)
 * add `--sourcemap` option to CLI to enable `:sourcemap` option on processor (#2265)
 
+Bug Fixes::
+
+* always set `imagesdir` attribute to value of `themesdir` when resolving images from theme
+
 Compliance::
 
 * configure table borders in way that is compatible with prawn-table > 0.2.2
